--- a/circularprogressindicator/src/main/res/values/attrs.xml
+++ b/circularprogressindicator/src/main/res/values/attrs.xml
@@ -7,7 +7,7 @@
         <attr name="progressStrokeWidth" format="dimension" />
         <attr name="progressBackgroundStrokeWidth" format="dimension" />
 
-        <attr name="textColor" format="color" />
+        <attr name="textColorCProgress" format="color" />
         <attr name="textSize" format="dimension" />
 
         <attr name="formattingPattern" format="string|reference" />
